rename presentation: The Birth of Distributed Intelligence

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=1920">
-<title>Orchestrating the Machines — A Code &amp; Bourbon Production</title>
+<title>The Birth of Distributed Intelligence — A Code &amp; Bourbon Production</title>
 <style>
   /* ===== RESET & BASE ===== */
   *, *::before, *::after {
@@ -591,7 +591,7 @@
 
   <!-- SLIDE 1: INTRODUCTION (frame) -->
   <section class="slide theme-frame active">
-    <h1>Orchestrating the Machines</h1>
+    <h1>The Birth of Distributed Intelligence</h1>
     <div class="title-decoration"></div>
     <p class="subtitle">A Code &amp; Bourbon Production</p>
   </section>
